gccida/c1/dwarf2out_decl
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_decl/src/dwarf2out.c:12083:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL || ( BYTE1( decl->block.supercontext) & v5) != 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_decl/src/dwarf2out.c:12104:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_decl/src/obj/dwarf2out.o] Error 1
